@@ -1106,7 +1106,7 @@ dict_create_index_step(
 		dulint	index_id = node->index->id;
 
 		err = dict_index_add_to_cache(node->table, node->index,
-					      FIL_NULL, TRUE);
+					      FIL_NULL, trx_is_strict(trx));
 
 		node->index = dict_index_get_if_in_cache_low(index_id);
 		ut_a(!node->index == (err != DB_SUCCESS));
